Fix box visibility

--- a/css/less/components/modules/dropdown.less
+++ b/css/less/components/modules/dropdown.less
@@ -39,8 +39,6 @@
 	}
 }
 
-.drop {
-	.box {
-		visibility: visible;
-	}
+.drop > .box {
+	visibility: visible;
 }
